<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        tools:context="com.example.laxmivaditala.myfistproject.MainActivity">


        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/frying_pan" />

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_image"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:text="@string/frying_pan"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurant_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_name"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/restaurant_description"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_des"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:text="@string/address"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_address"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/address_detail"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/restaurant_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:text="@string/phone"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurant_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_phone"
            android:layout_marginTop="4dp"
            android:autoLink="phone"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/phone_number"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/restaurant_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_number"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:text="@string/hours"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurant_timings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_hours"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/hours_timings"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/restaurant_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_timings"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:text="@string/website_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurant_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_website"
            android:layout_marginTop="4dp"
            android:autoLink="web"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/website"
            android:textSize="20dp" />


    </RelativeLayout>
</ScrollView>
